force-app/main/default/objects/Minor_Employee__c/fields/Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Birthdate__c</fullName>
    <description>Minor&#39;s birthdate</description>
    <inlineHelpText>Enter the minor&#39;s birthdate when performing an inspection</inlineHelpText>
    <label>Birthdate</label>
    <type>Date</type>
</CustomField>