force-app/main/default/objects/Minor_Employee__c/fields/Employer__c.field-meta.xml
<CustomField>
    <fullName>Employer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employer</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Minor_Employees</relationshipName>
    <type>Lookup</type>
</CustomField>