force-app/main/default/objects/Minor_Employee__c/fields/Inspection__c.field-meta.xml
<CustomField>
    <fullName>Inspection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related inspection</description>
    <inlineHelpText>Inspection this minor is involved with</inlineHelpText>
    <label>Inspection</label>
    <referenceTo>DIR_Inspection__c</referenceTo>
    <relationshipName>Minor_Employees</relationshipName>
    <type>Lookup</type>
</CustomField>