force-app/main/default/objects/Minor_Employee__c/fields/Normal_Work_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Normal_Work_Schedule__c</fullName>
    <description>The normal work schedule for the minor employee.</description>
    <inlineHelpText>The normal work schedule for the minor employee.</inlineHelpText>
    <label>Normal Work Schedule</label>
    <type>TextArea</type>
</CustomField>