force-app/main/default/objects/Minor_Employee__c/fields/Permit__c.field-meta.xml
<CustomField>
    <fullName>Permit__c</fullName>
    <description>Used on Inspection form</description>
    <inlineHelpText>When performing an inspection, select whether a permit is in place for this minor</inlineHelpText>
    <label>Permit?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>