force-app/main/default/objects/Minor_Employee__c/fields/Report_of_Labor_Code_Violation__c.field-meta.xml
<CustomField>
    <fullName>Report_of_Labor_Code_Violation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>RLLV</label>
    <referenceTo>Report_of_Labor_Code_Violation__c</referenceTo>
    <relationshipLabel>Minor Employees</relationshipLabel>
    <relationshipName>Minor_Employees</relationshipName>
    <type>Lookup</type>
</CustomField>